--- a/cf_helpdesk_marketplaces/views/marketplace_account_views.xml
+++ b/cf_helpdesk_marketplaces/views/marketplace_account_views.xml
@@ -22,8 +22,9 @@
         <field name="arch" type="xml">
             <form>
                 <header>
+                    <button name="action_test_connection" type="object" string="Probar conexión" class="btn-secondary"/>
                     <button name="action_sync_now" type="object" string="Sincronizar ahora" class="btn-primary"/>
-                    <button name="action_view_tickets" type="object" string="Ver tickets" class="btn-secondary"/>
+                    <button name="action_view_tickets" type="object" string="Ver tickets"/>
                 </header>
                 <sheet>
                     <group>
