--- a/cf_helpdesk_marketplaces/views/marketplace_ticket_views.xml
+++ b/cf_helpdesk_marketplaces/views/marketplace_ticket_views.xml
@@ -1,86 +1,1 @@
-
-<odoo>
-    <record id="view_marketplace_ticket_tree" model="ir.ui.view">
-        <field name="name">marketplace.ticket.tree</field>
-        <field name="model">marketplace.ticket</field>
-        <field name="arch" type="xml">
-            <tree>
-                <field name="name"/>
-                <field name="account_id"/>
-                <field name="partner_id"/>
-                <field name="order_reference"/>
-                <field name="status"/>
-                <field name="message_count" widget="integer"/>
-                <field name="create_date"/>
-            </tree>
-        </field>
-    </record>
-
-    <record id="view_marketplace_ticket_kanban" model="ir.ui.view">
-        <field name="name">marketplace.ticket.kanban</field>
-        <field name="model">marketplace.ticket</field>
-        <field name="arch" type="xml">
-            <kanban default_group_by="status">
-                <templates>
-                    <t t-name="kanban-box">
-                        <div class="oe_kanban_global_click">
-                            <field name="name"/>
-                            <div><strong>Pedido:</strong> <field name="order_reference"/></div>
-                            <div><field name="partner_id"/></div>
-                            <div><field name="message_count"/> mensajes</div>
-                        </div>
-                    </t>
-                </templates>
-            </kanban>
-        </field>
-    </record>
-
-    <record id="view_marketplace_ticket_form" model="ir.ui.view">
-        <field name="name">marketplace.ticket.form</field>
-        <field name="model">marketplace.ticket</field>
-        <field name="arch" type="xml">
-            <form>
-                <header>
-                    <button name="action_open_compose" type="object" string="Responder" class="btn-primary"/>
-                    <button name="action_mark_closed" type="object" string="Cerrar" class="btn-secondary" states="open,answered,pending"/>
-                    <field name="status" widget="statusbar" statusbar_visible="open,answered,pending,closed"/>
-                </header>
-                <sheet>
-                    <group>
-                        <group>
-                            <field name="name"/>
-                            <field name="account_id" required="1"/>
-                            <field name="partner_id"/>
-                        </group>
-                        <group>
-                            <field name="order_reference"/>
-                            <field name="external_id" readonly="1"/>
-                        </group>
-                    </group>
-                    <notebook>
-                        <page string="Mensajes">
-                            <field name="message_ids">
-                                <tree editable="bottom">
-                                    <field name="date"/>
-                                    <field name="direction"/>
-                                    <field name="author"/>
-                                    <field name="body"/>
-                                </tree>
-                            </field>
-                        </page>
-                        <page string="Chatter">
-                            <chatter/>
-                        </page>
-                    </notebook>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <record id="action_marketplace_tickets" model="ir.actions.act_window">
-        <field name="name">Tickets</field>
-        <field name="res_model">marketplace.ticket</field>
-        <field name="view_mode">kanban,tree,form,calendar,pivot,graph</field>
-        <field name="context">{'search_default_status_open': 1}</field>
-    </record>
-</odoo>
+<odoo><record id='view_marketplace_ticket_tree' model='ir.ui.view'><field name='name'>marketplace.ticket.tree</field><field name='model'>marketplace.ticket</field><field name='arch' type='xml'><tree><field name='name'/><field name='marketplace_name'/><field name='status'/></tree></field></record><record id='view_marketplace_ticket_form' model='ir.ui.view'><field name='name'>marketplace.ticket.form</field><field name='model'>marketplace.ticket</field><field name='arch' type='xml'><form><sheet><group><field name='name'/><field name='marketplace_name' readonly='1'/><field name='status'/></group><notebook><page string='Mensajes'><field name='message_ids'><tree><field name='author'/><field name='body'/></tree></field></page></notebook></sheet></form></field></record><record id='action_marketplace_tickets' model='ir.actions.act_window'><field name='name'>Tickets</field><field name='res_model'>marketplace.ticket</field><field name='view_mode'>tree,form</field></record></odoo>
