--- a/cf_helpdesk_marketplaces/views/marketplace_account_views.xml
+++ b/cf_helpdesk_marketplaces/views/marketplace_account_views.xml
@@ -1,1 +1,51 @@
-<odoo><record id='view_marketplace_account_tree' model='ir.ui.view'><field name='name'>marketplace.account.tree</field><field name='model'>marketplace.account</field><field name='arch' type='xml'><tree><field name='name'/><field name='api_url'/><field name='last_sync'/></tree></field></record><record id='view_marketplace_account_form' model='ir.ui.view'><field name='name'>marketplace.account.form</field><field name='model'>marketplace.account</field><field name='arch' type='xml'><form><header><button name='action_test_connection' type='object' string='Probar conexión' class='btn-primary'/><button name='action_sync_now' type='object' string='Sincronizar ahora' class='btn-secondary'/></header><sheet><group><field name='name'/><field name='api_url'/><field name='api_key' password='True'/><field name='last_sync' readonly='1'/></group></sheet><chatter/></form></field></record><record id='action_marketplace_accounts' model='ir.actions.act_window'><field name='name'>Cuentas</field><field name='res_model'>marketplace.account</field><field name='view_mode'>tree,form</field></record></odoo>
+<odoo>
+    <record id="view_marketplace_account_tree" model="ir.ui.view">
+        <field name="name">marketplace.account.tree</field>
+        <field name="model">marketplace.account</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="api_url"/>
+                <field name="shop_id"/>
+                <field name="last_sync"/>
+                <field name="ticket_count" widget="integer"/>
+                <field name="active"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="view_marketplace_account_form" model="ir.ui.view">
+        <field name="name">marketplace.account.form</field>
+        <field name="model">marketplace.account</field>
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <button name="action_test_connection" type="object" string="Probar conexión" class="btn-secondary"/>
+                    <button name="action_sync_now" type="object" string="Sincronizar ahora" class="btn-primary"/>
+                    <button name="action_view_tickets" type="object" string="Ver tickets"/>
+                </header>
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="active"/>
+                        </group>
+                        <group>
+                            <field name="api_url"/>
+                            <field name="api_key" password="True"/>
+                            <field name="shop_id"/>
+                            <field name="last_sync" readonly="1"/>
+                        </group>
+                    </group>
+                </sheet>
+                <chatter/>
+            </form>
+        </field>
+    </record>
+
+    <record id="action_marketplace_accounts" model="ir.actions.act_window">
+        <field name="name">Cuentas</field>
+        <field name="res_model">marketplace.account</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+</odoo>
