--- a/cf_helpdesk_marketplaces/views/marketplace_ticket_views.xml
+++ b/cf_helpdesk_marketplaces/views/marketplace_ticket_views.xml
@@ -1,4 +1,5 @@
 <odoo>
+    <!-- VISTA TREE -->
     <record id="view_marketplace_ticket_tree" model="ir.ui.view">
         <field name="name">marketplace.ticket.tree</field>
         <field name="model">marketplace.ticket</field>
@@ -15,6 +16,7 @@
         </field>
     </record>
 
+    <!-- VISTA KANBAN -->
     <record id="view_marketplace_ticket_kanban" model="ir.ui.view">
         <field name="name">marketplace.ticket.kanban</field>
         <field name="model">marketplace.ticket</field>
@@ -34,6 +36,7 @@
         </field>
     </record>
 
+    <!-- VISTA FORM -->
     <record id="view_marketplace_ticket_form" model="ir.ui.view">
         <field name="name">marketplace.ticket.form</field>
         <field name="model">marketplace.ticket</field>
@@ -77,10 +80,11 @@
         </field>
     </record>
 
+    <!-- ACCIÓN DE MENÚ -->
     <record id="action_marketplace_tickets" model="ir.actions.act_window">
         <field name="name">Tickets</field>
         <field name="res_model">marketplace.ticket</field>
-        <field name="view_mode">kanban,tree,form,calendar,pivot,graph</field>
+        <field name="view_mode">kanban,tree,form,pivot,graph</field>
         <field name="context">{'search_default_status_open': 1}</field>
     </record>
 </odoo>
