--- a/cf_helpdesk_marketplaces/views/marketplace_account_views.xml
+++ b/cf_helpdesk_marketplaces/views/marketplace_account_views.xml
@@ -1,4 +1,5 @@
 <odoo>
+    <!-- Vista TREE (lista de cuentas de marketplace) -->
     <record id="view_marketplace_account_tree" model="ir.ui.view">
         <field name="name">marketplace.account.tree</field>
         <field name="model">marketplace.account</field>
@@ -7,45 +8,95 @@
                 <field name="name"/>
                 <field name="api_url"/>
                 <field name="shop_id"/>
-                <field name="last_sync"/>
-                <field name="ticket_count" widget="integer"/>
                 <field name="active"/>
+                <field name="last_sync"/>
+                <field name="ticket_count"/>
             </tree>
         </field>
     </record>
 
+    <!-- Vista FORM (detalle de cuenta) -->
     <record id="view_marketplace_account_form" model="ir.ui.view">
         <field name="name">marketplace.account.form</field>
         <field name="model">marketplace.account</field>
         <field name="arch" type="xml">
-            <form>
+            <form string="Cuenta de Marketplace">
                 <header>
-                    <button name="action_test_connection" type="object" string="Probar conexión" class="btn-secondary"/>
-                    <button name="action_sync_now" type="object" string="Sincronizar ahora" class="btn-primary"/>
-                    <button name="action_view_tickets" type="object" string="Ver tickets"/>
+                    <button name="action_test_connection"
+                            string="Probar conexión"
+                            type="object"
+                            class="btn-primary"/>
+                    <button name="action_sync_now"
+                            string="Sincronizar ahora"
+                            type="object"
+                            class="btn-success"/>
+                    <button name="action_api_diagnostic"
+                            string="Diagnóstico de API"
+                            type="object"
+                            class="btn-secondary"/>
                 </header>
+
                 <sheet>
                     <group>
                         <group>
                             <field name="name"/>
-                            <field name="active"/>
-                        </group>
-                        <group>
                             <field name="api_url"/>
                             <field name="api_key" password="True"/>
                             <field name="shop_id"/>
+                            <field name="active"/>
+                        </group>
+                        <group>
                             <field name="last_sync" readonly="1"/>
+                            <field name="ticket_count" readonly="1"/>
                         </group>
                     </group>
+
+                    <notebook>
+                        <page string="Tickets relacionados">
+                            <field name="ticket_count" readonly="1"/>
+                            <button name="action_view_tickets"
+                                    string="Ver Tickets"
+                                    type="object"
+                                    class="btn-secondary"/>
+                        </page>
+
+                        <page string="Mensajes (log)">
+                            <chatter/>
+                        </page>
+                    </notebook>
                 </sheet>
-                <chatter/>
             </form>
         </field>
     </record>
 
+    <!-- Acción para abrir las cuentas de marketplace -->
     <record id="action_marketplace_accounts" model="ir.actions.act_window">
-        <field name="name">Cuentas</field>
+        <field name="name">Cuentas de Marketplace</field>
         <field name="res_model">marketplace.account</field>
         <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p>
+                Configura aquí tus cuentas de marketplaces Mirakl (PcComponentes, MediaMarkt, etc.)
+                para sincronizar mensajes automáticamente con el Helpdesk.
+            </p>
+        </field>
     </record>
+
+    <!-- Menú principal del módulo -->
+    <menuitem id="menu_marketplace_root"
+              name="Marketplaces"
+              sequence="10"
+              icon="fa-globe"/>
+
+    <menuitem id="menu_marketplace_accounts"
+              name="Cuentas"
+              parent="menu_marketplace_root"
+              action="action_marketplace_accounts"
+              sequence="20"/>
+
+    <menuitem id="menu_marketplace_tickets"
+              name="Tickets"
+              parent="menu_marketplace_root"
+              action="action_marketplace_tickets"
+              sequence="30"/>
 </odoo>
