--- a/cf_helpdesk_marketplaces/views/menu.xml
+++ b/cf_helpdesk_marketplaces/views/menu.xml
@@ -1,5 +1,25 @@
 <odoo>
-    <menuitem id="menu_marketplace_helpdesk_root" name="Marketplace Helpdesk" groups="base.group_system" sequence="10"/>
-    <menuitem id="menu_marketplace_tickets" name="Tickets" parent="menu_marketplace_helpdesk_root" action="action_marketplace_tickets" groups="base.group_system"/>
-    <menuitem id="menu_marketplace_accounts" name="Cuentas" parent="menu_marketplace_helpdesk_root" action="action_marketplace_accounts" groups="base.group_system"/>
+    <data>
+
+        <!-- MENÚ PRINCIPAL -->
+        <menuitem id="menu_marketplace_root"
+                  name="Marketplaces"
+                  sequence="10"
+                  groups="base.group_system"/>
+
+        <!-- SUBMENÚ DE CUENTAS -->
+        <menuitem id="menu_marketplace_accounts"
+                  name="Cuentas"
+                  parent="menu_marketplace_root"
+                  action="action_marketplace_accounts"
+                  sequence="20"/>
+
+        <!-- SUBMENÚ DE TICKETS -->
+        <menuitem id="menu_marketplace_tickets"
+                  name="Tickets"
+                  parent="menu_marketplace_root"
+                  action="action_marketplace_tickets"
+                  sequence="30"/>
+
+    </data>
 </odoo>
